# hrequests

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
bridge/: build.bat  go.mod  go.sum  server.go
hrequests/: __init__.py  __main__.py  __version__.py  browser.py  cffi.py  client.py  cookies.py  exceptions.py  extensions.py  headers.py  parser.py  proxies.py  reqs.py  response.py  session.py  toolbelt.py
hrequests/browser/: __init__.py  browser.py  chrome.py  common.py  engine.py  firefox.py  proxy.py
hrequests/playwright_mock/: __init__.py  context.py  element_handle.py  faker.py  frame.py  frame_locator.py  js_handle.py  locale.json  locator.py  mouse.py  page.py  playwright_mock.py  proxy_manager.py
hrequests/proxies/: __init__.py  evomi.py  mixin.py
