[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hrequests"
version = "0.9.0-beta"
description = "Hrequests (human requests) is a simple, configurable, feature-rich, replacement for the Python requests library."
authors = ["daijro <daijro.dev@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/daijro/hrequests"
documentation = "https://daijro.gitbook.io/hrequests/"
keywords = [
    "tls",
    "client",
    "http",
    "scraping",
    "requests",
    "humans",
    "playwright",
]
classifiers = [
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"
orjson = "*"
httpx = "*"
geventhttpclient = "*"
urllib3 = "*"
playwright = { version = "*", optional = true }
camoufox = { version = "^0.3.3", optional = true, extras = ["geoip"] }
rich = "*"
click = "*"
async-class = "*"
aioprocessing = "*"
numpy = "*"
parse = "*"
selectolax = "*"
event = "*"
faust-cchardet = "*"
msvc-runtime = { version = "*", markers = "sys_platform == 'win32' and python_version < '3.12'" }

[tool.poetry.extras]
all = ["playwright", "camoufox", "geoip"]
