[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hrequests"
version = "0.9.0"
description = "Hrequests (human requests) is a simple, configurable, feature-rich, replacement for the Python requests library."
authors = ["daijro <daijro.dev@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/daijro/hrequests"
documentation = "https://daijro.gitbook.io/hrequests/"
keywords = [
    "tls",
    "client",
    "http",
    "scraping",
    "requests",
    "humans",
    "playwright",
]
classifiers = [
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"
browserforge = "*"
ua_parser = "*"
orjson = "*"
httpx = "*"
geventhttpclient = "*"
urllib3 = "*"
typing-extensions = "*"
rich = "*"
rich-click = "*"
async-class = "*"
aioprocessing = "*"
numpy = "*"
parse = "*"
selectolax = "*"
faust-cchardet = "*"
camoufox = { version = "^0.3.9", optional = true, extras = ["geoip"] }
patchright = { version = "*", optional = true }
playwright = { version = "*", optional = true }
msvc-runtime = { version = "*", markers = "sys_platform == 'win32' and python_version < '3.13'" }

[tool.poetry.extras]
all = ["camoufox", "patchright", "playwright"]
firefox = ["camoufox", "playwright"]
chrome = ["patchright"]
